vlib/v/checker/tests/generics_field_struct_arr_err.out
vlib/v/checker/tests/generics_field_struct_arr_err.vv:22:7: error: `Callback` type is generic sumtype, must specify the generic type names, e.g. Callback[T], Callback[int]
   20 |     v    T
   21 |     prev T
   22 |     cb2  []Callback
      |          ~~~~~~~~~~
   23 |     a    int
   24 | }
